--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-back": "cd backend && node index.js",
+    "start-frontend": "cd frontend && ng serve",
+    "start": "npm-run-all --parallel start-back start-frontend"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "npm-run-all": "^4.1.5"
+  }
 }
