--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-back": "cd backend && node index.js",
+    "start-back": "cd backend && node src/server.js",
     "start-frontend": "cd frontend && ng serve",
     "start": "npm-run-all --parallel start-back start-frontend"
   },
