--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
-    "startDev": "nodemon src/server.js"
+    "startDev": "nodemon src/server.js",
+    "restartDb": "node src/dataBase/restartDb.js"
   },
   "keywords": [],
   "author": "",
