--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-back": "cd backend && node src/server.js",
     "start-frontend": "cd frontend && ng serve",
-    "start": "npm-run-all --parallel start-back start-frontend"
+    "start": "npm-run-all --parallel start-back start-frontend",
+    "restarDb": "cd backend && node src/dataBase/restartDb.js"
   },
   "keywords": [],
   "author": "",
