--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
     "startDev": "nodemon src/server.js",
-    "restartDb": "node src/dataBase/restartDb.js"
+    "restartDb": "node src/dataBase/restartDb.js",
+    "doc": "node src/swagger.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "joi": "^17.13.3",
+    "joi-to-swagger": "^6.2.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.5",
     "nodemon": "^3.1.7",
