--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start-back": "cd backend && node src/server.js",
     "start-frontend": "cd frontend && ng serve",
     "start": "npm-run-all --parallel start-back start-frontend",
-    "restarDb": "cd backend && node src/dataBase/restartDb.js"
+    "restartDb": "cd backend && node src/dataBase/restartDb.js"
   },
   "keywords": [],
   "author": "",
